Fix post comment buttons being cut off and positioning of share destination.  (D-06261, D-07622)

--- a/web/src/main/resources/public/style/core.css
+++ b/web/src/main/resources/public/style/core.css
@@ -4688,7 +4688,8 @@ table.header-zone .dragdrop-positioner {
 }
 
 .stream-scope {
-	background: url(style/images/stream-scope-bg.png);
+	background-color: white;
+	border: 1px solid #999;
 	display: inline-block;
 	width: 103px;
 	height: 17px;
@@ -4935,6 +4936,7 @@ body .dragdrop-proxy {
 	text-indent: -1000em;
 	clear: both;
 	float: right;
+	margin-bottom: 1px;
 }
 
 @sprite .message-comment .post-button.inactive {
@@ -6344,13 +6346,15 @@ body div.eureka-connect-liked-activity-wrapper {
 		margin-top: -3px;
 		display: inline;
 		zoom: 1;
+		height: 20px;
+		line-height: 20px;
 	}
 	
 	.stream-scope {
 		display: inline;
 		zoom: 1;
 		position: relative;
-		top: 5px;
+		top: -5px;
 	}
 	
 	.share-message-dialog-body .stream-scope {
